--- a/main.tex
+++ b/main.tex
@@ -247,7 +247,7 @@ The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature 
 background, there is a gap compatible with $(H/p G ) 2 p/6\pi_{5} $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
-=> $θ_{CMB} = 2.725820805 K$ which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
+=> $\Theta_{CMB} = 2.725820805 K$ which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Chapter 3). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
@@ -390,7 +390,7 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure1}
-\caption{Resonance-spectrum F(ν) computed for 15 motions of the largest, fast-spinning bodies of
+\caption{Resonance-spectrum $F(\nu)$ computed for 15 motions of the largest, fast-spinning bodies of
 the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
 shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
 \label{fig:figure_label}
@@ -399,7 +399,7 @@ shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurab
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure2}
-\caption{Same as Fig. 2, for N = 11 sizes «diameters» of the solar system (with c = 1 and the $\pi$
+\caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
 \end{figure}
