--- a/main.tex
+++ b/main.tex
@@ -408,7 +408,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure3}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
-Horizontal axis gives logarithm of the trial frequency ν (in μHz), the dashed line indicates a $3 \theta$
+Horizontal axis gives logarithm of the trial frequency $\nu$ (in μHz), the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
 \end{figure}
