--- a/main.tex
+++ b/main.tex
@@ -408,7 +408,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure3}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
-Horizontal axis gives logarithm of the trial frequency $\nu$ (in μHz), the dashed line indicates a $3 \theta$
+Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
 \end{figure}
@@ -528,8 +528,8 @@ $$\frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}$$
 Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
-only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series $s_{5} = \frac{137}{60}$.
-Indeed in appears in the Ptolemaic approximation for $\pi$: $$\frac{377}{120} = 2 + s_{5}/2$$.
+only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series $S_{5} = \frac{137}{60}$.
+Indeed in appears in the Ptolemaic approximation for $\pi$: $$\frac{377}{120} = 2 + S_{5}/2$$.
 Recall that the electrical constant a characterizes the force $\frac{\hbar c}{al^{2}}$ between two l - distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
