--- a/main.tex
+++ b/main.tex
@@ -582,7 +582,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
 $u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}$
-defining a to 39 ppm, where μ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
+defining a to 39 ppm, where \mu is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
 $$O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^2}$$
@@ -608,7 +608,7 @@ relations with mathematical constants different from the optimal basis e, such a
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\section {The Wyler's approach}
+\section {Wyler's approach}
 
 Armand Wyler singularized a value $a_{W}$ approaching a to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching p to 18.824 ppm.
@@ -664,7 +664,7 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
-m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron μ = 206.7682869, inside its
+m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 $$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
