--- a/main.tex
+++ b/main.tex
@@ -582,7 +582,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
 $u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}$
-defining a to 39 ppm, where \mu is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
+defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
 $$O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^2}$$
