--- a/main.tex
+++ b/main.tex
@@ -951,7 +951,9 @@ R_{p}(r) = \sqrt{\sqrt{C(r)}\left(\sqrt{C(r)} - \alpha\right)} + \\[+12pt]
 
 \section*{Acknowledgements}
 
-Here are your acknowledgements.
+This research would not have been possible without ...
+"Francis M. Sanchez, Valery A. Kotov, Michel Grosmann, Dominique Weigel, Renee
+Veysseyre, Christian Bizouard, Nicolas Flawisky, Denis Gayral, Laurent Gueroult."
 %
 \begin{flushright}\footnotesize
 Submitted on Month Day, Year / Accepted on Month Day, Year
@@ -979,6 +981,103 @@ of one electron atoms. \textit{Nuovo Cimento},
 v.\,B112, 1997, 1003. arXiv: hep-th/9702130.
 % Here is double paper-electronic published article
 
+@article{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+Nature 278, 605-612 (1979). % Here is referred book
+
+@book{2} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
+2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
+Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7_23. % Here is referred book
+
+@article{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
+(2016). % Here is referred book
+
+@article{4} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
+steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
+
+@article{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
+
+@article{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
+
+@article{7} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+\textit{Nature} 278, 605-612 (1979). % Here is referred book
+
+@article{8} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
+extragalactic objects.” Compt. Rend. Acad. Sci. Paris 310, Ser. II, 743-748 (1990). Fossat, E.,
+Boumier, P., Corbard, T., et al., 2017. Astron. Astrophys., 604, A40, 1; DOI: 10.1051/0004-
+6361/201730460. Grec, G., Fossat, E., 1979. Astron. Astrophys., 77, 351. Kotov, V.A., 2013.
+Izv. Krym. Astrofiz. Obs., 109(1), 232. Kotov, V.A., 2018. Earth Moon Planets, 122(1), 43;
+DOI:10.1007/s11038-018-9520-6. Sevin E., 1946. Compt. Rend. Acad. Sci. Paris, 222, 220.
+Kotov, V.A., 2018. Motion of the fast exoplanets. Astrophys. Space Sci. 363(3), 1-5; DOI:
+10.1007/s10509-018-3278-1. % Here is referred book
+
+@article{9} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
+
+@article{10} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
+constant of gravitation, G. Phil.Trans. R. Soc. A372: 20140032. % Here is referred book
+
+@article{11} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
+Pecker and J. Narlikar. Cambridge Univ. Press, 257-260 (2006).
+
+@article{12} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
+Issue 1, article id.6, 6 pp. (2017).
+
+@article{13} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
+Space Science} v.\,285 (2):429.
+
+@article{14} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
+
+@article{15} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
+
+@article{16} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
+Math., 109: 405–444, (1992).
+
+@article{17} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
+
+@article{18} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
+58 (1998) hep-th/9803188.
+
+@article{19} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
+Henri Cartan, Tome 12 (1959-1960) no. 2, Exposé no. 16, p. 1-16.
+
+@article{20} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
+Membranes, Wormholes, and Superstrings. arXiv:hep-th/9209058. (1992).
+
+@article{21} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
+footing with space". Physics Letters B. 678 (2): 218–221. arXiv:0905.0538. (2009)
+
+@article{22} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
+Nuovo Cimento 34, 201 (1982)
+
+@article{23} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
+3, 308–339
+
+@article{24} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
+blog.sciencenet.cn/home.php?mod=attachment&id=256716
+
+@article{25} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
+
+@book{26} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
+
+@article{27} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
+Law. Basic books, 2006
+
+@article{28} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
+
+@article{29} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
+ph/0603146v1 p.111.
+
+@article{30} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
+
+@article{31} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
+Physics, June 1985, Volume 15, 6, pp 683–691
+
+@article{32} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
+incommensurabilité cubique est sur les groupes de Bravais de sa famlille cristalline dans
+l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, p. 349-352 (1987)
+
+@misc{33} Atiyah M., private communication (December 2018)
 
 \end{thebibliography}
 \vspace*{-6pt}
