--- a/main.tex
+++ b/main.tex
@@ -730,224 +730,6 @@ A single citation is here: \cite{eddy}. Multiple citations are as follows \cite{
 %%%%%%%% the \cite{eddy} command generates citation number proceeded from
 %%%%%%%% the label \bibitem{eddy} in the bibliography list
 
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Equations}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-Here is a manual-numbered equation
-$$
-r\,= \sqrt{dx^{2} + dy^{2} + dz^{2}}.
-\eqno \mbox{(1.1)}
-$$
-
-Here is an automatic-numbered equation
-\begin{equation}
-r\,= \sqrt{dx^{2} + dy^{2} + dz^{2}}.
-\end{equation}
-
-Here is an unnumbered equation
-$$
-r\,= \sqrt{dx^{2} + dy^{2} + dz^{2}}.
-$$
-
-
-Here is a double-line equation, typeset to the left side
-$$
-\begin{array}{ll}
-%
-\displaystyle
-ds^{2}\,= L(r)dt^{2} - M(r)(dx^{2} + dy^{2} + dz^{2}) -\\[+8pt]  % 1st row
-%
-\displaystyle
-- N(r)(xdx + ydy + zdz)^{2}, \\% 2nd row
-\end{array}
-$$
-
-
-Here are automatic-designed brackets
-\begin{equation}
-\left( \frac{\mathrm{D} N^\alpha}{ds}\right),\quad
-\left[ \frac{\mathrm{D} N^\alpha}{ds}\right],\quad
-\left\{ \frac{\mathrm{D} N^\alpha}{ds}\right\},
-\end{equation}
-where you need in an ``empty'' bracket, if you feel to insert one-side brackets. For instance: $\left( \right.$.
-
-
-
-Here are hand-designed brackets
-\begin{equation}
-\bigl( \frac{\mathrm{D} N^\alpha}{ds}\bigr),\quad
-\Bigl( \frac{\mathrm{D} N^\alpha}{ds}\Bigr),\quad
-\biggl( \frac{\mathrm{D} N^\alpha}{ds}\biggr) , 
-\label{gensol}
-\end{equation}
-where is no need to insert an ``empty'' bracket, so you can mere type
-\begin{equation}
-\frac{\mathrm{D} N^\alpha}{ds} =
-\Bigl\{ K^\alpha ; 0.
-\end{equation}
-
-
-%%%%%%%% [+8pt] is intendation following after the row
-%%%%%%%% \displaystyle is normalsize in the fractions
-
-%%%%%%%% this equation will be typeset to right, if use
-%%%%%%%% {rr} argument istead {ll} in the preamble of the array
-
-%%%%%%%% there is so many rows available as you feel
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Formulae in text}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-Take operators in the \,{}\, brackets in the inline formulae, for compact typing: \,{=}\, gives $w \,{=}\, c^2 $. Write down \dots \ instead of ...
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Items}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-An unnumbered item containing bullets is:
-\begin{itemize}
-\item The most general metric
-\item The most general metric
-\item The most general metric
-\end{itemize}
-
-
-Here is an unnumbered item:
-\begin{itemize}
-\item [] The most general metric
-\item [] The most general metric
-\item [] The most general metric
-\end{itemize}
-
-
-An Arabic-numbered item:
-\begin{enumerate}
-\item The most general metric
-\item The most general metric
-\item The most general metric
-\end{enumerate}
-
-
-A your-style numbered item:
-\begin{itemize}
-\item [A1] The most general metric
-\item [A2] The most general metric
-\item [A3] The most general metric
-\end{itemize}
-
-
-A double-level item (it is numbered, a sample):
-\begin{enumerate}
-\item The most general metric
-  \begin{enumerate}
-  \item The most general metric
-  \item The most general metric
-  \item The most general metric
-  \end{enumerate}
-\item The most general metric
-\item The most general metric
-\item The most general metric
-\end{enumerate}
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{References to text pages}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-If you like to refer a numbered formula in the {equation} environment, input \label{nickname-of-the-formula} into the formula, so you will need to type (\ref{nickname-of-the-formula}) in the text instead of (12), for instance. Such reference will automatically be changed keeping the real number of the reference, if you reorder/remove/add formulae.
-
-It works in only the {equation} environment --- auto numbered formulae.
-
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Cross-references}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-Insert \label{myidea} in your text, then you have that page number where your label \pageref{myidea} appeared. For instance:
-
-The general equation, see formula (\ref{gensol}) in page~\pageref{gensol}, is very good.
-
-Don't use two or more same labels in the same document!
-
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Brackets, dividing paragraphs, etc.}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-The commands `` and '' produce open-closed brackets: ``notation''.
-
-Instead of \par one uses empty space(s) between paragraphs, because it is more visible.
-
-Any sequence following a formula starts new paragraph.
-
-If a paragraph ends by a formula, the next paragraph starts from the first line indented.
-
-Text and space in formulae:
-$$
-\mbox{here is a text in this formula}\quad
-\mbox{small space}\qquad \mbox{big space}
-$$
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Spaces and dashes}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-Einstein-Infeld, space-like, Bohr-like include single dash.
-
-Page numbers 3--27 include double dash.
-
-Thin spaces in text: v.\,13, no.\,24.
-
-American long dash is---like this case.
-
-British long dash is --- like this one.
-
-We assumed the British case in our Journal.
-
-
-
-\markright{Your Full Names.  Short Title of Your Paper}
-\section{Normal size inside fractions}
-\markright{Your Full Names.  Short Title of Your Paper}
-
-
-Use ``displaystyle'' command before every line:
-\begin{equation}
-\begin{array}{ll}
-\displaystyle
-R_{p}(r) = \sqrt{\sqrt{C(r)}\left(\sqrt{C(r)} - \alpha\right)} + \\[+12pt]
-\displaystyle
-+ \;\alpha\ln\left|\frac{\sqrt{\sqrt{C(r)}} + \sqrt{\sqrt{C(r)} - 
-\alpha}}{\sqrt{\alpha}}\right|.
-\end{array}
-\end{equation}
-
-Compare it with follows
-\begin{equation}
-\begin{array}{ll}
-%  \displaystyle
-R_{p}(r) = \sqrt{\sqrt{C(r)}\left(\sqrt{C(r)} - \alpha\right)} + \\[+12pt]
-%  \displaystyle
-+ \;\alpha\ln\left|\frac{\sqrt{\sqrt{C(r)}} + \sqrt{\sqrt{C(r)} - 
-\alpha}}{\sqrt{\alpha}}\right|.
-\end{array}
-\end{equation}
-
-
-
-
 \section*{Acknowledgements}
 
 This research would not have been possible without ...
@@ -980,10 +762,10 @@ of one electron atoms. \textit{Nuovo Cimento},
 v.\,B112, 1997, 1003. arXiv: hep-th/9702130.
 % Here is double paper-electronic published article
 
-@article{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+\bibitem{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 Nature 278, 605-612 (1979). % Here is referred book
 
-@book{2} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
+\bibitem{2} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
 2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
 Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7-23. % Here is referred book
 
