--- a/main.tex
+++ b/main.tex
@@ -780,7 +780,79 @@ only manifestations of the general (Field and flickering Matter) wave propagatio
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
 
+\section {Simplicity at work}
 
+The application of the old direct scientific method, looking for fine tuning between physical
+parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
+confirmed by holographic quanto-cosmic relations. The Relativity theory is a local one and do not
+apply in Cosmology: the Absolute Space-time is re-established, realized by the Microwave Cosmic
+Background, which identifies with the Grandcosmos Absolute Frame.
+The standard Holographic Principle must be generalized to units others than the Planck length,
+even invoking the visible Universe wavelength in 1D holography, which breaks another taboo of
+current thinking: the Planck wall, by an enormous factor, about $10^{61}$ resolving the vacuum energy
+dilemna factor by $10^{122}$ .
+The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
+be confirmed by recent studies [30].
+The simplest method of looking for simple monomial expressions involving mathematical
+constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
+ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
+should be worried what the Universe would be if a were not 137.035999...`. It definitly
+disproves the Multiverse Hypothesis.
+The present article confirms also the Topological Axis, which was obtained by the simplest
+visualizing method to represent in a single figure the characteristic lengths in macro and micro-
+physics, taking the electron wavelength as unity. The pertinence of the Topological Axis confirms
+the importance of the Electron wavy propagation. This rehabilitates the String theory, including the
+tachyonic bosonic version, since the canonical dimension 26 appears to characterizes the observable
+universe radius R. This confirms that c is not a cosmic pertinent speed, as is clearly shown both by
+logic (it is far too slow) and quantum non-locality.
+Moreover, by excluding c in the simplest tool of elementary physics, prospective dimensional
+analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature
+and the cosmic overall periodicity, which connects with the holic dimension n = 30 in the
+Topological Axis, whose apparent dissymetry suggests directly the existence of a Grandcosmos.
+While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
+appears, showing the gauge bosons, so confirming the Standard Model of Particle Physics, but with
+massive gluon, which is independently seriously considered [31].
+This means also that the International System must go back to only three fundamental unities,
+Mass, Length and Time. The distinction between Length and Time must be emphasized, as
+Poincaré, the father of 4D Relativity Theory himself, recommended. Indeed their confusion, by
+writing c = 1, impeded the fact that R is a trivial length, already present in astrophysical text-books.The simplest model, the gravitational Hydrogen molecule gives R, explaining the above 2 factor
+and justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant
+70.790 (km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s),
+which confirms the direct novea measurement, but disagree $3\theta$ with the standard value.
+The simplest statistical theory of Eddington gave another justification to R. Also, particularly
+simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
+trivial fraction 3M/10 of the observable universe.
+The simplest topological equations, the equality between dimensionless varieties, circumference,
+area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest chapter of
+physics. This modern, negative, opinion is in fact contrary to the ancient culture, for which the
+Cosmology is the first of all science, so must be the simplest. In the original sens of the word
+`revolution`, it is a return to the source of Science, the 'all is whole number', of Pythagoras. Even the
+degenerate form of topological or holographic relations, the simplest diophantine equations, the
+Holic Principle, shows direct pertinence. In particular it emphatizes the 30 dimensions, which
+appear decisive in the Topological Axis.
+The simplest proof of the computation basis character of the electrical parameter a is provided
+by the multiple appearance of the terms $e^{a}$ and $a^{a}$ . The later is of order $e^{p/e}$ , while $e^{1/e}$ is decisive for
+the operational definition of e. The fact that $a^{a}$ appears also in the 5th Optimal (305 notes) Musical
+Scale highlights a liaison with Arithmetics.
+Now, the deep significance of a number of dimensions is the number of independent variables,
+which is a fundamental invariant, whatever the theory [32]. So, it is normal to introduce the
+hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
+Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
+work, the essential role of octonion algebra in the final theory [24].
+The ancestral problem of the stability of the solar system must be revisited, taking into account
+seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
+and Arp effects must be seriously considered, and used to constrain the flickering Time-Length-
+Mass process.
+It is so previsible that the very large infra-red telescopes in preparation will show in the very far
+field old-type galaxies instead of nascent ones. Then no artifice, as inflation, black energy,
+multiverse, will not save the already refuted standard evolutionary model.
+It is now clear that present mathematics are incomplete, and this article announces a
+Reunification of Philosophy, Mathematics, Physics, Informatics and Theoretical Biology.
+Acknowledgements. The authors want to salute the memory of Sir Michael Atiyah for this message
+to one of us; `While I appreciate your efforts in physics, please do not use my name in any way
+other than referencing a published paper`. We salute his modesty, but his introduction of the rather
+unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
+of proving the existence of a fundamental theory.
 
 \section{Citations}
 \markright{Your Full Names.  Short Title of Your Paper}
@@ -829,20 +901,20 @@ Nature 278, 605-612 (1979). % Here is referred book
 2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
 Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7-23. % Here is referred book
 
-@article{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
+\bibitem{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
 (2016). % Here is referred book
 
-@article{4} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
+\bibitem{4} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
 steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
 
-@article{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
+\bibitem{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
 
-@article{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
+\bibitem{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
 
-@article{7} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+\bibitem{7} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 \textit{Nature} 278, 605-612 (1979). % Here is referred book
 
-@article{8} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
+\bibitem{8} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
 extragalactic objects.” Compt. Rend. Acad. Sci. Paris 310, Ser. II, 743-748 (1990). Fossat, E.,
 Boumier, P., Corbard, T., et al., 2017. Astron. Astrophys., 604, A40, 1; DOI: 10.1051/0004-
 6361/201730460. Grec, G., Fossat, E., 1979. Astron. Astrophys., 77, 351. Kotov, V.A., 2013.
@@ -851,74 +923,74 @@ DOI:10.1007/s11038-018-9520-6. Sevin E., 1946. Compt. Rend. Acad. Sci. Paris, 22
 Kotov, V.A., 2018. Motion of the fast exoplanets. Astrophys. Space Sci. 363(3), 1-5; DOI:
 10.1007/s10509-018-3278-1. % Here is referred book
 
-@article{9} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
+\bibitem{9} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
 
-@article{10} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
+\bibitem{10} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
 constant of gravitation, G. Phil.Trans. R. Soc. A372: 20140032. % Here is referred book
 
-@article{11} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
+\bibitem{11} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
 Pecker and J. Narlikar. Cambridge Univ. Press, 257-260 (2006).
 
-@article{12} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
+\bibitem{12} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
 Issue 1, article id.6, 6 pp. (2017).
 
-@article{13} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
+\bibitem{13} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
 Space Science} v.\,285 (2):429.
 
-@article{14} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
+\bibitem{14} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
 
-@article{15} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+\bibitem{15} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
 Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
 
-@article{16} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
+\bibitem{16} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
 Math., 109: 405–444, (1992).
 
-@article{17} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+\bibitem{17} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
 Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
 
-@article{18} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
+\bibitem{18} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
 58 (1998) hep-th/9803188.
 
-@article{19} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
+\bibitem{19} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
 Henri Cartan, Tome 12 (1959-1960) no. 2, Exposé no. 16, p. 1-16.
 
-@article{20} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
+\bibitem{20} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
 Membranes, Wormholes, and Superstrings. arXiv:hep-th/9209058. (1992).
 
-@article{21} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
+\bibitem{21} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
 footing with space". Physics Letters B. 678 (2): 218–221. arXiv:0905.0538. (2009)
 
-@article{22} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
+\bibitem{22} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
 Nuovo Cimento 34, 201 (1982)
 
-@article{23} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
+\bibitem{23} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
 3, 308–339
 
-@article{24} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
+\bibitem{24} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
 https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/
 
-@article{25} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
+\bibitem{25} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
 
-@book{26} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
+\bibitem{26} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
 
-@article{27} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
+\bibitem{27} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
 Law. Basic books, 2006
 
-@article{28} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
+\bibitem{28} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
 
-@article{29} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
+\bibitem{29} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
 ph/0603146v1 p.111.
 
-@article{30} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
+\bibitem{30} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
 
-@article{31} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
+\bibitem{31} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
 Physics, June 1985, Volume 15, 6, pp 683–691
 
-@article{32} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
+\bibitem{32} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
 incommensurabilité cubique est sur les groupes de Bravais de sa famlille cristalline dans
 l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, p. 349-352 (1987)
 
-@misc{33} Atiyah M., private communication (December 2018)
+\bibitem{33} Atiyah M., private communication (December 2018)
 
 \end{thebibliography}
 \vspace*{-6pt}
