--- a/main.tex
+++ b/main.tex
@@ -72,11 +72,11 @@ The later enters the Topological axis in liaison with the canonical Galaxy Group
 \setcounter{page}{1}
 
 
-\markboth{Your Full Names. Short Title of Your Paper}{\thepage}
-\markright{Your Full Names. Short Title of Your Paper}
+\markboth{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}{\thepage}
+\markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
 \section{Introduction: Deterministic Computation and Hierarchy Principle}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and aG, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ration p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_G\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement (10$^{-4}\!$).
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ration p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_G\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement (10$^{-4}\!$).
 
 One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on a and aG from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics.... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
@@ -134,8 +134,11 @@ dramatic appearance of the Eddington Large Number, and allows to approach each p
 In particular, the relation $R/\lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by $(l_{CNB} / l_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
-( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer $$R/r_{H(0)} \sim
-(4 \prec l_{CMB} /r_{H(0)} )^{4}$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
+( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
+\begin{equation}
+R/r_{H(0)} \sim (4 \prec l_{CMB} /r_{H(0)} )^{4}
+\end{equation}
+precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where W is the mass ratio W boson-
@@ -148,7 +151,7 @@ The gravitational Hydrogen molecule model [3] implies the following double corre
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
-the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , we obtain the double relation:
+the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , one obtain the double relation:
 $$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
