--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,7 @@ The later enters the Topological axis in liaison with the canonical Galaxy Group
 \markboth{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}{\thepage}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
+\chapter{Introduction}
 \section{Introduction: Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ration p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_G\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement (10$^{-4}\!$).
 
@@ -98,7 +99,7 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so justifying at last the Cosmos vastness. In particular,  the most famous prime number of Hstory 2$^{127}\!$-1, and the Eddington's Large number = 136 $\times$ 2$^{256}\!$  are empathized. The second section will study the role of intermediate mathematical constants such as the Eddington's constant 137. The third Section involves mathematical constants, such as $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2, the simplest basis of all.
 
-
+\chapter{Chapter1}
 \section{Internal Fine Tuning and Canonical Large Numbers}
 \markright{Your Full Names.  Short Title of Your Paper}
 
@@ -510,6 +511,7 @@ t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
 \end{equation}
 confirms the above Planck wall breakdown.
 
+\chapter{chapter2}
 \section{Fine-tuning with intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
 \section{The Arithmetical Monster Prime 137}
@@ -725,6 +727,7 @@ $$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam}
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
 
+\chapter{Chapter3}
 \section {Discussion}
 
 This article aims to solve the following problems : 
@@ -783,6 +786,7 @@ only manifestations of the general (Field and flickering Matter) wave propagatio
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
 
+\chapter{conclusions}
 \section {Simplicity at work}
 
 The application of the old direct scientific method, looking for fine tuning between physical
