--- a/main.tex
+++ b/main.tex
@@ -99,8 +99,8 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so justifying at last the Cosmos vastness. In particular,  the most famous prime number of Hstory 2$^{127}\!$-1, and the Eddington's Large number = 136 $\times$ 2$^{256}\!$  are empathized. The second section will study the role of intermediate mathematical constants such as the Eddington's constant 137. The third Section involves mathematical constants, such as $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2, the simplest basis of all.
 
-\chapter{Chapter1}
-\section{Internal Fine Tuning and Canonical Large Numbers}
+\chapter {Chapter1}
+\section {Internal Fine Tuning and Canonical Large Numbers}
 \markright{Your Full Names.  Short Title of Your Paper}
 
 The most famous fine tuning implies cosmic quantities, but this is awkwardly called the `Double
@@ -727,8 +727,9 @@ $$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam}
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
 
-\chapter{Chapter3}
+\chapter {Chapter3}
 \section {Discussion}
+\markright{Your Full Names.  Short Title of Your Paper}
 
 This article aims to solve the following problems : 
 \begin{itemize}
@@ -786,8 +787,9 @@ only manifestations of the general (Field and flickering Matter) wave propagatio
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
 
-\chapter{conclusions}
+\chapter {Conclusions}
 \section {Simplicity at work}
+\markright{Your Full Names.  Short Title of Your Paper}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
